// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextLink /> Should render correctly 1`] = `
<div>
  <a
    class="sc-gswNZR bbFtvE"
    href="/test"
  >
    <span
      class="sc-ftTHYK cRFGYD"
    >
      some text
    </span>
  </a>
</div>
`;

exports[`<TextLink /> Should render correctly with custom className 1`] = `
<div>
  <a
    class="sc-gswNZR bbFtvE test-custom-classname"
    href="/test"
  >
    <span
      class="sc-ftTHYK cRFGYD"
    >
      some text
    </span>
  </a>
</div>
`;

exports[`<TextLink /> Should render with nextified href 1`] = `
<div>
  <a
    class="sc-gswNZR bbFtvE"
    href="/blog/test"
  >
    <span
      class="sc-ftTHYK cRFGYD"
    >
      some text
    </span>
  </a>
</div>
`;
